--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@pulumi/kubernetes": "^3.12.1",
     "@pulumi/kubernetes-cert-manager": "^0.0.1",
     "@pulumi/pulumi": "^3.21.0",
+    "@sidetrek/pulumi-component-resources": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/js-yaml": "^4.0.5",
     "chalk": "^4.1.2",
